adding new background picture

--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -24,7 +24,7 @@
 
     var bkgnd = new Image();
     //bkgnd.src = "file://ustmp-fnp01/Programs/FedEx/Agents/3189455/Documents/CHEERSMASTER/titlescreen.png"
-    bkgnd.src = "https://preview.ibb.co/gNGdoc/titlescreen.png";
+    bkgnd.src = "images/cmBackground.png";
 
     var enemy = new Image();
     enemy.src = "https://image.ibb.co/nHaM8c/enemy.png";
