--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -401,6 +401,8 @@ if(spawn ==  true) {
       if(left == true) {
         playerx -= 2;
       }
+      playerx += 1.001;
+      playerx -= 1.001;
     }
 //##################################################################
 
