adding touch action css, meta tag, and changing btn color

--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="viewport" content="width=device-width">
   <style type="text/css">
-    canvas {border: 0px solid black;}
-    .bottompane {display: inline;}
-    .btn {
-      width: 50%;
-      height: 50px;
-      background: black;
-    }
+  html {
+    touch-action: manipulation;
+  }
+  canvas {border: 0px solid black;}
+  .bottompane {display: inline;}
+  .btn {
+    width: 50%;
+    height: 50px;
+    background: cyan;
+  }
   </style>
 </head>
 <body onload="start(); preload();">
