--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -9,9 +9,9 @@
   canvas {border: 0px solid black;}
   .bottompane {display: inline;}
   .btn {
-    width: 50%;
+    width: 100%;
     height: 50px;
-    background: cyan;
+    background: red;
   }
   </style>
 </head>
