--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width,user-scalable=no">
+  <!-- <meta name="viewport" content="width=device-width,user-scalable=no"> -->
   <style type="text/css">
   html {
     touch-action: manipulation;
