--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!-- <meta name="viewport" content="width=device-width,user-scalable=no"> -->
+  <meta name="viewport" content="width=device-width,user-scalable=no">
   <style type="text/css">
   html {
     touch-action: manipulation;
@@ -9,7 +9,7 @@
   canvas {border: 0px solid black;}
   .bottompane {display: inline;}
   .btn {
-    width: 50%;
+    width: 50px;
     height: 50px;
     background: yellow;
   }
