--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
+  <meta name="viewport" content="width=device-width,initial-scale=0.57,user-scalable=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <style type="text/css">
   html {
@@ -10,8 +10,9 @@
   canvas {border: 0px solid black;}
   .bottompane {display: inline;}
   .btn {
-    width: 50px;
+    width: 50%;
     height: 50px;
+    border: 1px solid black;
     background: yellow;
   }
   </style>
