changed touch listener

--- a/games/cheersmaster.html
+++ b/games/cheersmaster.html
@@ -445,7 +445,7 @@ rightBtn.addEventListener('touchend', function(e){
   keyLift('right')
 })
 
-jumpBtn.addEventListener('touch', function(e){
+jumpBtn.addEventListener('touchstart', function(e){
   e.preventDefault()
   keyPush('jump')
 })
