--- a/games/element.html
+++ b/games/element.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+        <meta name="viewport" content="width=device-width,initial-scale=0.57,user-scalable=no">
         <title>Battle of the Elements</title>
         <style type="text/css">
                 body {
