--- a/games/element.html
+++ b/games/element.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-        <meta name="viewport" content="user-scalable=no">
+        <meta name="viewport" content="initial-scale=0.4,user-scalable=no">
         <title>Battle of the Elements</title>
         <style type="text/css">
                 body {
