added joystick dir

--- a/games/element.html
+++ b/games/element.html
@@ -110,6 +110,7 @@
         </div>
         <script src="scripts/VirtualJoystick.js"></script>
         <script src="scripts/element/element.js"></script>
+        <script src="scripts/element/joystick.js"></script>
 </body>
 
 </html>
