--- a/games/element.html
+++ b/games/element.html
@@ -74,8 +74,8 @@
                         top: 800px;
                 }
                 #joystick {
-                        width: 100%;
-                        height: 100%;
+                        width: 350px;
+                        height: 350px;
                         border: 1px dashed white;
                 }
         </style>
