--- a/games/element.html
+++ b/games/element.html
@@ -7,6 +7,7 @@
         <style type="text/css">
                 body {
                         background-color: black;
+                        overscroll-behavior: contain;
                 }
 
                 canvas {
