--- a/games/element.html
+++ b/games/element.html
@@ -82,7 +82,7 @@
         </style>
 </head>
 
-<body onload="start();">
+<body id="bod" onload="start();">
 
         <div align="center">
                 <canvas id="canvas" width="1000px" height="700px"></canvas>
@@ -112,6 +112,12 @@
         <script src="scripts/VirtualJoystick.js"></script>
         <script src="scripts/element/element.js"></script>
         <script src="scripts/element/joystick.js"></script>
+        <script type="text/javascript">
+                document.getElementById('bod').addEventListener('touchstart', function(e) {
+                        e.preventDefault();
+                        console.log('hi')
+                })
+        </script>
 </body>
 
 </html>
