--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                                 need a keyboard.                                 -->
                 </p>
             </div>
-            <div id="gamelist" class="row" style="margin-left: 100px; margin-top: 60px;">
+            <div id="gamelist" class="row" style="margin-left: 100px; margin-top: 60px; overflow: hidden;">
                 <!--games get inserted here-->
             </div>
 
