--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
                       width=device-width, initial-scale=1.0, 
                       minimum-scale=1.0, maximum-scale=1.0, 
                       user-scalable=no, target-densitydpi=device-dpi">
+                      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <title>Sleysin</title>
@@ -96,14 +97,14 @@
             <div class="card-header  header-background" style="border: 0px dotted;">
                 <ul class="nav nav-pills card-header-pills">
                     <li class="nav-item">
-                        <button id="menuBtn" class="nav-link bg-dark text-light" href="#" style="border: 5px dashed white">Sleysin</button>
+                        <button id="menuBtn" class="nav-link bg-dark text-light" href="#" style="border: 5px dashed white"><i class="fas fa-bars"></i></button>
                     </li>
                 </ul>
             </div>
         </div>
 
 
-        <div class="card-body background">
+        <div id="test" class="card-body background">
             <div style="text-align: left">
                 <p style="color: white;">
                     <!-- Developer note: We are working on updates to get the games running on mobile.
@@ -125,32 +126,31 @@
         </div> -->
 
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
     <script type="text/javascript">
 
-        var sidenav = document.getElementById('sidenav');
-        var menuBtn = document.getElementById('menuBtn');
-        var gamelist = $('#gamelist');
+        // var sidenav = $('#sidenav');
+        // var menuBtn = $('#menuBtn');
+        // var gamelist = $('#gamelist');
+        console.log(test);
         
         $('#gamelist').attr('style', 'margin-left: 0px; margin-top: 60px; overflow: hidden;');
-        
+
         var sidenavactive = false;
 
-        console.log(menuBtn);
-
-        menuBtn.addEventListener('click', function() {
+        $('#menuBtn').on('click', function() {
             if(!sidenavactive) {
-                $('#gamelist').attr('style', 'margin-left: 100px;  margin-top: 60px; overflow: hidden;');
-                sidenav.style.display = 'block';    
+                $('#gamelist').attr('style', 'margin-top: 60px; overflow: hidden;');   
+                $('#gamelist').animate({marginLeft:'100px'}, 250);
+                $('#sidenav').animate({width:'toggle'}, 250);
                 sidenavactive = true;
             } else {
-                $('#gamelist').attr('style', 'margin-left: 0px;  margin-top: 60px; overflow: hidden;');
-                sidenav.style.display = 'none';    
+                $('#gamelist').attr('style', 'margin-left: 100px; margin-top: 60px; overflow: hidden;');  
+                $('#gamelist').animate({marginLeft:'0px'}, 250);
+                $('#sidenav').animate({width:'toggle'}, 250);  
                 sidenavactive = false;            
             }                
         })
