--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 
         $('#menuBtn').on('click', function() {
             if(!sidenavactive) {
-                $('#gamelist').attr('style', 'margin-top: 60px; overflow: hidden;');   
+                $('#gamelist').attr('style', 'margin-left: 0px; margin-top: 60px; overflow: hidden;');   
                 $('#gamelist').animate({marginLeft:'100px'}, 250);
                 $('#sidenav').animate({width:'toggle'}, 250);
                 sidenavactive = true;
