--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--bootstrap-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <title>Sleysin</title>
-    
+
     <style type="text/css">
         html, body {
             overflow-x: hidden;
@@ -79,9 +79,91 @@
             }
         }
         #sidenav {
-            margin-top: -1px;
+            margin-top: -15px;
             display: none;
         }
+        #menuBtn:focus {
+            outline: none;
+        }
+        * {
+  margin: 0;
+  padding: 0; 
+}
+
+
+/* Icon */
+
+#nav-icon3 {
+  width: 60px;
+  height: 45px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon3 span{
+  display: block;
+  position: absolute;
+  height: 4px;
+  width: 70%;
+  background: #d3531a;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon3 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+  top: 18px;
+}
+
+#nav-icon3 span:nth-child(4) {
+  top: 36px;
+}
+
+#nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+#nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+}
+
+#nav-icon3.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
     </style>
 </head>
 
@@ -99,8 +181,15 @@
             <div class="card-header  header-background" style="border: 0px dotted;">
                 <ul class="nav nav-pills card-header-pills">
                     <li class="nav-item">
-                        <button id="menuBtn" class="nav-link bg-dark text-light" style="border: 5px dashed black">
-                            <i class="fas fa-bars"></i>
+                        <button id="menuBtn" class="nav-link bg-dark text-light" style="margin-top: -15px; height: 51px; background: black !important; border: 5px dashed black;">
+
+                              <div id="nav-icon3">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                              </div>
+ 
                         </button>
                     </li>
                 </ul>
@@ -135,7 +224,9 @@
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
         crossorigin="anonymous"></script>
     <script type="text/javascript">
-
+	$('#nav-icon3').click(function(){
+		$(this).toggleClass('open');
+	});
         // var sidenav = $('#sidenav');
         // var menuBtn = $('#menuBtn');
         // var gamelist = $('#gamelist');
@@ -145,7 +236,7 @@
 
         var sidenavactive = false;
 
-        $('#menuBtn').on('click', function() {
+        $('#nav-icon3').on('click', function() {
             if(!sidenavactive) {
                 $('#gamelist').attr('style', 'margin-left: 0px; margin-top: 60px; overflow: hidden;');   
                 $('#gamelist').animate({marginLeft:'100px'}, 250);
