--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     </div>
 
     
-    <div class="card text-center">
+    <div style="background: black" class="card text-center">
         <div style="position: fixed; width: 100%; margin-top: -1px; margin-left: -1px; z-index: 10;">
             <div class="card-header  header-background" style="border: 0px dotted;">
                 <ul class="nav nav-pills card-header-pills">
