fixed button press..

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
         var sidenavactive = false;
 
-        $('#menuBtn').on('click', function() {
+        $('#nav-icon3').on('click', function() {
             if(!sidenavactive) {
                 $('#gamelist').attr('style', 'margin-left: 0px; margin-top: 60px; overflow: hidden;');   
                 $('#gamelist').animate({marginLeft:'100px'}, 250);
