--- a/index.html
+++ b/index.html
@@ -86,6 +86,16 @@
                 font-size: 18px;
             }
         }
+        @media screen and (max-width: 450px) {
+            width: 100px;
+            height: 35px;
+            margin: auto;
+            font-family: 'Press Start 2P', cursive;
+            font-size: 13px;
+            letter-spacing: 1px;
+            color: rgb(255, 0, 0);
+            transform: scale(2, 1);
+        }
         #sidenav {
             margin-top: -15px;
             display: none;
@@ -187,12 +197,12 @@
 }
 .logo {
     /* background: white; */
-    width: 100px;
+    width: 150px;
     height: 35px;
     margin: auto;
-    font-family: 'Akronim', cursive;
-    font-size: 30px;
-    letter-spacing: 4px;
+    font-family: 'Press Start 2P', cursive;
+    font-size: 17.5px;
+    letter-spacing: 1px;
     color: rgb(255, 0, 0);
     transform: scale(2, 1);
     /* text-shadow: -1px -1px 0 red, 1px -1px 0 white, -1px 1px 0 white, 1px 1px 0 white; */
@@ -227,8 +237,9 @@
                     </li>
                         <div class="logocontainer">
                             <div class="logo">
-                                Sleysin
+                                SLEYSIN
                             </div>
+                            <hr />
                         </div>
                 </ul>
             </div>
