test and hopefully last test to get joystick working

--- a/games/element.html
+++ b/games/element.html
@@ -86,7 +86,7 @@
 
         <div align="center">
                 <canvas id="canvas" width="1000px" height="700px"></canvas>
-                <p id="stats" style="color: lime; font-size: 30px;">hi</p>
+                <p id="stats" style="color: red; font-size: 30px;">hi</p>
                 <div class="joystickContainer">
                         <canvas id="joystick"></canvas>
                 </div>
