reordered, added pictures and some mechanics

--- a/games/element.html
+++ b/games/element.html
@@ -133,18 +133,6 @@
                 <div class="joystickContainer">
                         <canvas id="joystick"></canvas>
                 </div>
-                <!-- <div id="upBtn" class="upbtn btn">
-                        u
-                </div>
-                <div id="downBtn" class="downbtn btn">
-                        d
-                </div>
-                <div id="leftBtn" class="leftbtn btn">
-                        l
-                </div>
-                <div id="rightBtn" class="rightbtn btn">
-                        r
-                </div> -->
                 <div id="fireBtn">
                         
                 </div> 
@@ -164,10 +152,11 @@
                         <p class="bbtnb">B</p>
                 </div>
         </div>
+        <script src="scripts/element/objects.js"></script>
         <script src="scripts/element/element.js"></script>
         <script src="scripts/element/joystick.js"></script>
-        <script type="text/javascript">
-        </script>
+        <script src="scripts/element/conjure.js"></script>
+        <script src="scripts/element/events.js"></script>
 </body>
 
 </html>
