--- a/games/element.html
+++ b/games/element.html
@@ -135,7 +135,7 @@
         <div align="center">
                 <canvas id="canvas" width="1000px" height="700px"></canvas>
                 <!-- <p id="stats" style="color: cyan; font-size: 30px;">hi</p> -->
-                <button id="testBtn" style="color: cyan; font-size: 30px;">hi</button>
+                <button id="testBtn" style="background: lime; color: cyan; font-size: 30px;">hi</button>
                 <div class="joystickContainer">
                         <canvas id="joystick"></canvas>
                 </div>
